fix: Value in .env.example

--- a/.env.example
+++ b/.env.example
@@ -39,7 +39,7 @@ REACT_APP_HASURA_URL=http://localhost:8080/v1/graphql
 REACT_APP_S3_BASE_URL=http://coordinape.s3-website.localhost.localstack.cloud:4566
 # NODE: Used for the node scripts and vercel serverless functions
 NODE_HASURA_URL=http://localhost:8080/v1/graphql
-TELEGRAM_BOT_TOKEN=<your Telegram testing bot token>
+TELEGRAM_BOT_TOKEN=your-telegramt-testing-bot-token
 IMAGES_AWS_ENDPOINT=http://s3.localhost.localstack.cloud:4566
 IMAGES_AWS_BUCKET=coordinape
 
