--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-icons": "^4.3.1",
     "react-query": "3.34.8",
     "react-router-dom": "6.2.1",
+    "react-select": "5.3.2",
     "react-string-replace": "0.4.4",
     "react-virtualized-auto-sizer": "1.0.5",
     "recoil": "0.4.1",
