--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@radix-ui/react-checkbox": "^0.1.5",
     "@radix-ui/react-dialog": "^0.1.7",
     "@radix-ui/react-hover-card": "^0.1.5",
-    "@radix-ui/react-icons": "^1.1.0",
+    "@radix-ui/react-icons": "1.1.1",
+    "@radix-ui/react-select": "0.1.1",
     "@self.id/core": "0.1.0",
     "@sentry/integrations": "6.19.2",
     "@sentry/node": "6.19.2",
@@ -57,7 +58,6 @@
     "react-icons": "^4.3.1",
     "react-query": "3.34.8",
     "react-router-dom": "6.2.1",
-    "react-select": "5.3.2",
     "react-string-replace": "0.4.4",
     "react-virtualized-auto-sizer": "1.0.5",
     "recoil": "0.4.1",
