--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,7 +3,42 @@ name: Typecheck, Lint and Test
 on: [push]
 
 jobs:
-  ci:
+  lint_and_typecheck:
+    runs-on: ubuntu-latest
+    env:
+      CI: true
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 14.x
+
+      - uses: actions/cache@v2
+        with:
+          path: '**/node_modules'
+          key: nodeModules-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+
+      - uses: actions/cache@v2
+        with:
+          path: "/home/runner/.cache"
+          key: nodeModules-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+
+      - uses: actions/cache@v2
+        with:
+          path: '**/hardhat/node_modules'
+          key: hardhatNodeModules-${{ runner.os }}-${{ hashFiles('**/hardhat/yarn.lock') }}
+
+      - run: yarn --frozen-lockfile
+      - run: ./scripts/setup.sh
+      - run: yarn typecheck
+      - run: yarn lint:check
+      - run: yarn prettier:check
+
+      # remove symlink to prevent redundant caching
+      - name: Cleanup
+        run: |
+          rm node_modules/@coordinape/hardhat
+  test:
     runs-on: ubuntu-latest
     env:
       CI: true
@@ -39,6 +74,11 @@ jobs:
 
       - uses: actions/cache@v2
         with:
+          path: "/home/runner/.cache"
+          key: nodeModules-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+
+      - uses: actions/cache@v2
+        with:
           path: '**/node_modules'
           key: nodeModules-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
 
@@ -48,11 +88,20 @@ jobs:
           key: hardhatNodeModules-${{ runner.os }}-${{ hashFiles('**/hardhat/yarn.lock') }}
 
       - run: yarn --frozen-lockfile
+      - run: yarn cypress install
+      - run: yarn cypress verify
       - run: ./scripts/setup.sh
-      - run: yarn typecheck
-      - run: yarn lint:check
-      - run: yarn prettier:check
+      - run: cp .ci.env .env # hasura needs a .env file
       - run: yarn test:ci
+
+      - uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: cy-artifacts
+          path: |
+            ./cypress/videos
+            ./cypress/screenshots
+
       - name: Codecov
         run: |
           curl -Os https://uploader.codecov.io/latest/linux/codecov
