--- a/package.json
+++ b/package.json
@@ -76,8 +76,10 @@
     "generate": "./scripts/generate_zeus.sh",
     "hasura": "hasura --skip-update-check --envfile ../.env --project ./hasura",
     "docker:start": "docker compose --profile dev up -d",
-    "docker:stop": "docker compose down",
-    "docker:clean": "docker compose down -v",
+    "docker:stop": "docker compose --profile dev down",
+    "docker:clean": "docker compose --profile dev down -v",
+    "cy:dev": "cypress open > /dev/null",
+    "cy:run": "cypress run",
     "start": "craco start",
     "build": "craco build",
     "build:local": "craco  --max_old_space_size=4096 build",
@@ -170,6 +172,9 @@
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "crypto-browserify": "3.12.0",
+    "cypress": "9.5.3",
+    "cypress-dotenv": "2.0.0",
+    "dotenv": "16.0.0",
     "dotenv-expand": "6.0.1",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
@@ -179,6 +184,7 @@
     "eslint-plugin-react": "7.26.1",
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-unicorn": "41.0.0",
+    "ethereumjs-wallet": "1.0.2",
     "execa": "6.0.0",
     "figma-api": "1.9.2",
     "hasura-cli": "2.2.0",
@@ -200,6 +206,7 @@
     "ttypescript": "^1.5.13",
     "typescript": "4.4.3",
     "util": "0.12.4",
+    "web3-provider-engine": "15.0.12",
     "webpack": "5"
   }
 }
