Replace siwe and siwe-parser dependencies by published versions
Signed-off-by: Tiago Nascimento <tiago.nascimento@spruceid.com>

--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
     "react-virtualized-auto-sizer": "1.0.5",
     "recoil": "0.4.1",
     "sharp": "^0.30.1",
-    "siwe": "link:./../siwe/packages/siwe",
-    "siwe-parser": "link:./../siwe/packages/siwe-parser",
+    "siwe": "^2.0.3",
+    "@spruceid/siwe-parser": "^2.0.0",
     "source-map-explorer": "2.5.2",
     "stream": "^0.0.2",
     "styled-components": "5.2.3",
