--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "react-virtualized-auto-sizer": "1.0.5",
     "recoil": "0.4.1",
     "sharp": "^0.30.5",
+    "siwe": "^2.0.3",
+    "@spruceid/siwe-parser": "^2.0.0",
     "source-map-explorer": "2.5.2",
     "stream": "^0.0.2",
     "styled-components": "5.2.3",
