--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material-ui/pickers": "3.3.10",
     "@radix-ui/react-avatar": "^0.1.4",
     "@radix-ui/react-dialog": "^0.1.7",
+    "@radix-ui/react-popover": "^0.1.6",
     "@self.id/core": "0.1.0",
     "@sentry/integrations": "6.19.2",
     "@sentry/node": "6.19.2",
