Add relationships for circle_api_keys and permissions for api-user role

--- a/hasura/metadata/databases/default/tables/public_circle_api_keys.yaml
+++ b/hasura/metadata/databases/default/tables/public_circle_api_keys.yaml
@@ -1,3 +1,7 @@
 table:
   name: circle_api_keys
   schema: public
+object_relationships:
+- name: createdByUser
+  using:
+    foreign_key_constraint_on: created_by
