--- a/hasura/metadata/databases/default/tables/public_pending_token_gifts.yaml
+++ b/hasura/metadata/databases/default/tables/public_pending_token_gifts.yaml
@@ -31,6 +31,28 @@ object_relationships:
     foreign_key_constraint_on: sender_id
 select_permissions:
 - permission:
+    allow_aggregations: true
+    columns:
+    - circle_id
+    - created_at
+    - dts_created
+    - epoch_id
+    - id
+    - recipient_id
+    - sender_id
+    - tokens
+    - updated_at
+    filter:
+      circle:
+        api_keys:
+          _and:
+          - hash:
+              _eq: X-Hasura-Api-Key-Hash
+          - read_pending_token_gifts:
+              _eq: true
+    limit: 100
+  role: api-user
+- permission:
     columns:
     - circle_id
     - created_at
