--- a/hasura/metadata/databases/default/tables/public_profiles.yaml
+++ b/hasura/metadata/databases/default/tables/public_profiles.yaml
@@ -14,6 +14,33 @@ array_relationships:
 select_permissions:
 - permission:
     columns:
+      - address
+      - avatar
+      - background
+      - bio
+      - created_at
+      - discord_username
+      - github_username
+      - id
+      - medium_username
+      - skills
+      - telegram_username
+      - twitter_username
+      - updated_at
+      - website
+    filter:
+      users:
+        circle:
+          api_keys:
+            _and:
+              - hash:
+                  _eq: X-Hasura-Api-Key-Hash
+              - read_member_profiles:
+                  _eq: true
+    limit: 50
+  role: api-user
+- permission:
+    columns:
     - address
     - avatar
     - background
