--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "hardhat:dev": "yarn --cwd hardhat dev",
     "hardhat:ganache": "./hardhat/scripts/start-ganache.sh",
     "hardhat:test": "yarn --cwd hardhat test",
-    "test": "yarn hardhat:ganache --exec craco test --maxWorkers=2",
+    "test": "yarn hardhat:ganache --exec craco test --runInBand",
     "test:ci": "yarn hardhat:ganache --exec ./scripts/ci.sh",
     "eject": "craco eject",
     "format:staged": "lint-staged",
