Allow api-user to call updateAllocation action if the api key has the appropriate permissions

--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -120,6 +120,7 @@ actions:
     - name: verification_key
       value_from_env: HASURA_EVENT_SECRET
   permissions:
+  - role: api-user
   - role: user
 - name: updateCircle
   definition:
