Update Admin Page Attribute & support Mobile (#739)
Co-authored-by: Lawrence Wang <l@lw.io>

--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@material-ui/lab": "4.0.0-alpha.58",
     "@material-ui/pickers": "3.3.10",
     "@radix-ui/react-avatar": "^0.1.4",
+    "@radix-ui/react-checkbox": "^0.1.5",
     "@radix-ui/react-dialog": "^0.1.7",
+    "@radix-ui/react-hover-card": "^0.1.5",
+    "@radix-ui/react-icons": "^1.1.0",
     "@self.id/core": "0.1.0",
     "@sentry/integrations": "6.19.2",
     "@sentry/node": "6.19.2",
