--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,6 @@ services:
       - ${LOCAL_HASURA_PORT:-8080}:${LOCAL_HASURA_PORT:-8080}
     depends_on:
       - postgres
-      - localstack
     restart: always
     environment: &graphql_engine_environment
       HASURA_GRAPHQL_DATABASE_URL: postgres://${LOCAL_POSTGRES_USER}:${LOCAL_POSTGRES_PASSWORD}@postgres:${LOCAL_POSTGRES_PORT}/${LOCAL_POSTGRES_DATABASE}
@@ -53,7 +52,6 @@ services:
       - ${CI_HASURA_PORT}:${CI_HASURA_PORT}
     depends_on:
       - postgres-ci
-      - localstack
     environment:
       <<: *graphql_engine_environment
       HASURA_GRAPHQL_DATABASE_URL: postgres://${LOCAL_POSTGRES_USER}:${LOCAL_POSTGRES_PASSWORD}@postgres-ci:${LOCAL_POSTGRES_PORT}/${LOCAL_POSTGRES_DATABASE}
@@ -63,6 +61,7 @@ services:
 
   # for local s3 storage for images
   localstack:
+    profiles: ['ci']
     image: localstack/localstack:latest
     restart: always
     hostname: s3
