enable REACT_APP_FEATURE_FLAG_FIXED_PAYMENTS flag for CI

--- a/.ci.env
+++ b/.ci.env
@@ -21,5 +21,5 @@ LOCAL_POSTGRES_USER=postgres
 LOCAL_POSTGRES_PASSWORD=postgrespassword
 LOCAL_POSTGRES_DATABASE=postgres
 NODE_HASURA_URL=http://localhost:8081/v1/graphql
-
+REACT_APP_FEATURE_FLAG_FIXED_PAYMENTS=true
 # vim:ft=sh
