--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "docker:start": "docker compose --profile dev up -d",
     "docker:stop": "docker compose --profile dev down",
     "docker:clean": "docker compose --profile dev down -v",
-    "cy:dev": "cypress open > /dev/null",
+    "cy:dev": "yarn test:ci --cypress-only --local",
     "cy:run": "cypress run",
     "start": "craco start",
     "build": "craco build",
