changing perms to use profile id instead of user id

--- a/hasura/metadata/databases/default/tables/public_teammates.yaml
+++ b/hasura/metadata/databases/default/tables/public_teammates.yaml
@@ -29,8 +29,10 @@ select_permissions:
     - created_at
     - updated_at
     filter:
-      user_id:
-        _eq: X-Hasura-User-Id
+      user:
+        profile:
+          id:
+            _eq: X-Hasura-User-Id
   role: user
 event_triggers:
 - definition:
