--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -103,6 +103,16 @@ actions:
   permissions:
   - role: user
   comment: Generates an API key for a circle
+- name: linkDiscordUser
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/linkDiscordUser'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  comment: allow authenticated users to link a discord account to their profile
 - name: logoutUser
   definition:
     kind: synchronous
@@ -221,6 +231,7 @@ custom_types:
   - name: AllocationCsvInput
   - name: CreateVaultInput
   - name: GenerateApiKeyInput
+  - name: LinkDiscordUserInput
   objects:
   - name: CreateCircleResponse
     relationships:
@@ -363,5 +374,15 @@ custom_types:
       type: object
       field_mapping:
         hash: hash
+  - name: LinkDiscordUserResponse
+    relationships:
+    - remote_table:
+        schema: discord
+        name: users
+      name: linkDiscordUser_DiscordUser
+      source: default
+      type: object
+      field_mapping:
+        id: id
   scalars:
   - name: timestamptz
