Update permissions with a discord-specific column

--- a/hasura/metadata/databases/default/tables/discord_roles_circles.yaml
+++ b/hasura/metadata/databases/default/tables/discord_roles_circles.yaml
@@ -33,7 +33,7 @@ select_permissions:
           _and:
           - hash:
               _eq: X-Hasura-Api-Key-Hash
-          - read_circle:
+          - read_discord:
               _eq: true
   role: api-user
 - permission:
