--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ REACT_APP_INFURA_PROJECT_ID=infuraidhere
 ETHEREUM_RPC_URL=https://mainnet.infura.io/v3/infuraidhere
 COORDINAPE_USER_ADDRESS=0xfad763da9051953fea58c2304395719a3b6ba361
 IMAGES_AWS_BUCKET=coordinape
+# separate allowed domains with commas
+SIWE_ALLOWED_DOMAINS=localhost:3000,
 
 # Default local variables
 LOCAL_HASURA_PORT=8080
@@ -63,4 +65,3 @@ FIGMA_ACCESS_TOKEN=
 IMAGES_AWS_ACCESS_KEY_ID=tbd
 IMAGES_AWS_SECRET_ACCESS_KEY=tbd
 IMAGES_AWS_REGION=tbd
-
