--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -168,6 +168,16 @@ actions:
       value_from_env: HASURA_EVENT_SECRET
   permissions:
   - role: user
+- name: uploadOrgLogo
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/uploadOrgLogo'
+    forward_client_headers: true
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
 - name: uploadProfileAvatar
   definition:
     kind: synchronous
@@ -221,6 +231,7 @@ custom_types:
   - name: AllocationCsvInput
   - name: CreateVaultInput
   - name: GenerateApiKeyInput
+  - name: UploadOrgImageInput
   objects:
   - name: CreateCircleResponse
     relationships:
@@ -363,5 +374,15 @@ custom_types:
       type: object
       field_mapping:
         hash: hash
+  - name: UpdateOrgResponse
+    relationships:
+    - remote_table:
+        schema: public
+        name: protocols
+      name: org
+      source: default
+      type: object
+      field_mapping:
+        id: id
   scalars:
   - name: timestamptz
