Claims feature that allows a user to withdtaw funds from a vault
Overview:
- Claims Directory that includes the Hasura mutations and queries, a custom hook `useClaimAllocation.ts` and it's corresponding test.

Testing:
- Submit a distribution for a completed epoch, make sure your address is included in the distribution
- The 'Claim Your Allocation' button should appear in the nav. clock it.
- Select 'Claim (token name)' on the claims page

--- a/hasura/metadata/databases/default/tables/public_claims.yaml
+++ b/hasura/metadata/databases/default/tables/public_claims.yaml
@@ -43,7 +43,6 @@ select_permissions:
     columns:
     - address
     - amount
-    - claimed
     - created_at
     - distribution_id
     - id
@@ -51,6 +50,7 @@ select_permissions:
     - new_amount
     - profile_id
     - proof
+    - txHash
     - updated_at
     filter:
       distribution:
@@ -68,7 +68,7 @@ update_permissions:
 - permission:
     check: null
     columns:
-    - claimed
+    - txHash
     filter:
       distribution:
         epoch:
