--- a/.ci.env
+++ b/.ci.env
@@ -22,4 +22,6 @@ LOCAL_POSTGRES_PASSWORD=postgrespassword
 LOCAL_POSTGRES_DATABASE=postgres
 NODE_HASURA_URL=http://localhost:8081/v1/graphql
 REACT_APP_FEATURE_FLAG_FIXED_PAYMENTS=true
+REACT_APP_FEATURE_FLAG_VAULTS=true
+LOCAL_SEED_ADDRESS=0x21DF875603Ba765a15F9ae20e633D2DAe42952d9
 # vim:ft=sh
