Add SIWE for CI host

--- a/.ci.env
+++ b/.ci.env
@@ -24,4 +24,5 @@ NODE_HASURA_URL=http://localhost:8081/v1/graphql
 REACT_APP_FEATURE_FLAG_FIXED_PAYMENTS=true
 REACT_APP_FEATURE_FLAG_VAULTS=true
 LOCAL_SEED_ADDRESS=0x21DF875603Ba765a15F9ae20e633D2DAe42952d9
+SIWE_ALLOWED_DOMAINS=localhost:3001
 # vim:ft=sh
