Add yarn dev command
And set BROWSER=none for craco command

--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "hardhat:test": "yarn --cwd hardhat test",
     "test": "yarn hardhat:ganache --exec craco test --runInBand",
     "test:ci": "yarn hardhat:ganache --exec ./scripts/ci.sh",
+    "dev": "BROWSER=none craco start",
     "eject": "craco eject",
     "format:staged": "lint-staged",
     "lint": "eslint",
