Cypress DX improvements (#961)
`yarn cy:dev` now spins up a separate, fresh environment to run
E2E tests on. It will not clobber a local dev setup and also cleans
itself up on exit.

Co-authored-by: Kevin Siegler <17910833+topocount@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -84,8 +84,8 @@
     "docker:start": "docker compose --profile dev up -d",
     "docker:stop": "docker compose --profile dev down",
     "docker:clean": "docker compose --profile dev down -v",
-    "cy:dev": "cypress open > /dev/null",
-    "cy:run": "cypress run",
+    "cy:dev": "yarn test:ci --cypress-only --local",
+    "cy:run": "yarn test:ci --cypress-only",
     "start": "craco start",
     "build": "craco build",
     "build:local": "craco  --max_old_space_size=4096 build",
