Set CI devchain port to 8555
This is residual work from separating out our local CI environment from
the local dev environment. We should be able to have two separate
devchain processes running simultaneously to support each environment.

The project tags were removed from the ci.sh file because they
complicate setup and teardown in docker compose commands and dont really
add much

test plan

yarn cy:run

ensure your local devchain isn't queried by the integration tests at
any point.

--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "hardhat:ganache": "./hardhat/scripts/start-ganache.sh",
     "hardhat:test": "yarn --cwd hardhat test",
     "test": "yarn hardhat:ganache --exec craco test --runInBand",
-    "test:ci": "yarn hardhat:ganache --exec ./scripts/ci.sh",
+    "test:ci": "CI=true yarn hardhat:ganache --exec ./scripts/ci.sh",
     "dev": "BROWSER=none craco start",
     "eject": "craco eject",
     "format:staged": "lint-staged",
