include cypress/ in linting

--- a/package.json
+++ b/package.json
@@ -102,10 +102,10 @@
     "eject": "craco eject",
     "format:staged": "lint-staged",
     "lint": "eslint",
-    "lint:check": "eslint \"{api,api-lib,hasura,src}/**/*.{js,ts,tsx,graphql}\"",
+    "lint:check": "eslint \"{api,api-lib,cypress,hasura,src}/**/*.{js,ts,tsx,graphql}\"",
     "lint:fix": "yarn lint:check --fix",
     "postinstall": "./scripts/link_hardhat.sh",
-    "prettier": "prettier \"{api,src}/**/*.{js,ts,tsx}\"",
+    "prettier": "prettier \"{api,api-lib,cypress,hasura,src}/**/*.{js,ts,tsx}\"",
     "prettier:check": "yarn prettier --check",
     "prettier:fix": "yarn prettier --write",
     "typecheck": "tsc --noEmit && tsc -p tsconfig-backend.json --noEmit",
