send circle admin CRM data to airtable when a new circle is created

--- a/.env.example
+++ b/.env.example
@@ -52,6 +52,10 @@ IMAGES_AWS_BUCKET=coordinape
 # Production Environment
 #REACT_APP_HASURA_URL=https://coordinape-prod.hasura.app/v1/graphql
 #REACT_APP_S3_BASE_URL=https://coordinape-prod.s3.amazonaws.com/
+# these are only needed to upload circle admin data to airtable
+#AIRTABLE_API_KEY=...
+#AIRTABLE_CRM_BASE_ID=...
+#AIRTABLE_CRM_TABLE_ID=CircleAdmins
 
 # CI Environment - added as env vars in github if no conflicts exist
 #NODE_HASURA_URL=http://localhost:8081/v1/graphql
