--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "@sentry/node": "6.19.2",
     "@sentry/react": "6.19.2",
     "@sentry/tracing": "6.19.2",
+    "@spruceid/siwe-parser": "^2.0.0",
     "@stitches/react": "1.2.6",
     "@storybook/react": "^6.4.19",
     "@web3-react/core": "6.1.9",
     "@web3-react/injected-connector": "6.0.7",
     "@web3-react/walletconnect-connector": "6.2.13",
     "@web3-react/walletlink-connector": "6.2.5",
+    "airtable": "^0.11.4",
     "aws-sdk": "^2.1072.0",
     "clsx": "1.1.1",
     "d3-force-3d": "2.3.2",
@@ -65,7 +67,6 @@
     "recoil": "0.4.1",
     "sharp": "^0.30.5",
     "siwe": "^2.0.3",
-    "@spruceid/siwe-parser": "^2.0.0",
     "source-map-explorer": "2.5.2",
     "stream": "^0.0.2",
     "styled-components": "5.2.3",
