--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,12 +1,11 @@
 /docker/    @topocount
 /scripts/   @topocount
 
-/src/       @teeolendo
-/hardhat/   @teeolendo
+/src/       @levity @teeolendo @cryptograffe
+/hardhat/   @teeolendo @topocount
 
 /api/       @zashton @topocount
 /api-lib/   @zashton @topocount
 /hasura/    @zashton @topocount
 
-/src/       @levity
 /cypress/   @topocount
