--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@web3-react/injected-connector": "6.0.7",
     "@web3-react/walletconnect-connector": "6.2.13",
     "@web3-react/walletlink-connector": "6.2.5",
+    "airtable": "^0.11.4",
     "aws-sdk": "^2.1072.0",
     "clsx": "1.1.1",
     "d3-force-3d": "2.3.2",
