--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -75,6 +75,16 @@ actions:
       value_from_env: HASURA_EVENT_SECRET
   permissions:
   - role: user
+- name: createVaultTx
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/actionManager'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  comment: Log offchain information for vault transactions
 - name: deleteEpoch
   definition:
     kind: synchronous
@@ -243,6 +253,7 @@ custom_types:
   - name: GenerateApiKeyInput
   - name: UploadOrgImageInput
   - name: CoordinapeInput
+  - name: LogVaultTxInput
   objects:
   - name: CreateCircleResponse
     relationships:
@@ -391,6 +402,16 @@ custom_types:
         schema: public
         name: protocols
       name: org
+      source: default
+      type: object
+      field_mapping:
+        id: id
+  - name: LogVaultTxResponse
+    relationships:
+    - remote_table:
+        schema: public
+        name: vault_transactions
+      name: vault_tx_return_object
       source: default
       type: object
       field_mapping:
