--- a/hasura/metadata/databases/default/tables/public_distributions.yaml
+++ b/hasura/metadata/databases/default/tables/public_distributions.yaml
@@ -16,6 +16,13 @@ array_relationships:
       table:
         name: claims
         schema: public
+- name: vault_transactions
+  using:
+    foreign_key_constraint_on:
+      column: distribution_id
+      table:
+        name: vault_transactions
+        schema: public
 insert_permissions:
 - permission:
     backend_only: false
