--- a/hasura/metadata/databases/default/tables/public_token_gifts.yaml
+++ b/hasura/metadata/databases/default/tables/public_token_gifts.yaml
@@ -5,6 +5,9 @@ object_relationships:
 - name: circle
   using:
     foreign_key_constraint_on: circle_id
+- name: epoch
+  using:
+    foreign_key_constraint_on: epoch_id
 - name: gift_private
   using:
     manual_configuration:
