--- a/hasura/metadata/databases/default/tables/tables.yaml
+++ b/hasura/metadata/databases/default/tables/tables.yaml
@@ -5,6 +5,7 @@
 - "!include public_circle_private.yaml"
 - "!include public_circles.yaml"
 - "!include public_claims.yaml"
+- "!include public_contributions.yaml"
 - "!include public_distributions.yaml"
 - "!include public_epoches.yaml"
 - "!include public_gift_private.yaml"
