--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material-ui/pickers": "3.3.10",
     "@radix-ui/react-avatar": "^0.1.4",
     "@radix-ui/react-checkbox": "^0.1.5",
+    "@radix-ui/react-collapsible": "^0.1.6",
     "@radix-ui/react-dialog": "^0.1.7",
     "@radix-ui/react-hover-card": "^0.1.5",
     "@radix-ui/react-icons": "1.1.1",
