Re-add deployment_block that was lost from rebase

--- a/hasura/metadata/databases/default/tables/public_vaults.yaml
+++ b/hasura/metadata/databases/default/tables/public_vaults.yaml
@@ -30,6 +30,7 @@ select_permissions:
     - created_at
     - created_by
     - decimals
+    - deployment_block
     - id
     - org_id
     - simple_token_address
