--- a/hasura/metadata/databases/default/tables/public_vault_transactions.yaml
+++ b/hasura/metadata/databases/default/tables/public_vault_transactions.yaml
@@ -8,7 +8,7 @@ object_relationships:
 - name: distribution
   using:
     foreign_key_constraint_on: distribution_id
-- name: user
+- name: profile
   using:
     foreign_key_constraint_on: created_by
 - name: vault
