--- a/hasura/metadata/databases/default/tables/public_vault_transactions.yaml
+++ b/hasura/metadata/databases/default/tables/public_vault_transactions.yaml
@@ -34,7 +34,10 @@ select_permissions:
         protocol:
           circles:
             users:
-              profile:
-                id:
-                  _eq: X-Hasura-User-Id
+              _and:
+              - profile:
+                  id:
+                    _eq: X-Hasura-User-Id
+              - deleted_at:
+                  _is_null: true
   role: user
