--- a/hasura/metadata/databases/default/tables/public_profiles.yaml
+++ b/hasura/metadata/databases/default/tables/public_profiles.yaml
@@ -11,6 +11,20 @@ array_relationships:
       remote_table:
         name: users
         schema: public
+- name: vault_transactions
+  using:
+    foreign_key_constraint_on:
+      column: created_by
+      table:
+        name: vault_transactions
+        schema: public
+- name: vaults
+  using:
+    foreign_key_constraint_on:
+      column: created_by
+      table:
+        name: vaults
+        schema: public
 select_permissions:
 - permission:
     columns:
