--- a/hasura/metadata/databases/default/tables/public_protocols.yaml
+++ b/hasura/metadata/databases/default/tables/public_protocols.yaml
@@ -39,4 +39,8 @@ select_permissions:
                 _eq: X-Hasura-User-Id
           - deleted_at:
               _is_null: true
+          - _and:
+            - circle:
+                deleted_at:
+                  _is_null: true
   role: user
